using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;



internal class AnimationString
{
    internal static string isMove = "isMove";
    internal static string isRuning = "isRuning";
    internal static string isGrounded = "isGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string Jump = "Jumping";
    internal static string isOnWall = "isOnWall";
    internal static string isCeiling = "isCeiling";
    internal static string attackTrigger = "attack";
    internal static string canMove = "canMove";
    internal static string tarGet = "tarGet";
    internal static string isAlive = "isAlive";
    internal static string hitTrigger = "hit";
    internal static string lockVelocity = "lockVelocity";
    internal static string attackCooldown = "attackCooldown";
    internal static string bowTrigger = "bow";
}
